<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--    flOutSide-->
    <FrameLayout
        android:id="@+id/flOutSide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!--        layoutMain-->
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20sp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!--            tvTitle-->
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red_BA"
                    android:fontFamily="@font/nunito_medium"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <!--            tvDescription-->
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:paddingHorizontal="24dp"
                    android:text="@string/are_you_sure_want_to_delete_this_item"
                    android:textColor="@color/red_BA"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="42dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="23dp"
                    android:orientation="horizontal">

                    <!--                    btnNo-->
                    <TextView
                        android:id="@+id/btnNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_16_stroke_red_solid_white"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:paddingVertical="7dp"
                        android:text="@string/no"
                        android:textColor="@color/red_BA"
                        android:textSize="16sp" />

                    <!--                    btnYes-->
                    <TextView
                        android:id="@+id/btnYes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_16_solid_red"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:paddingVertical="7dp"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>