<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ViewActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_app_bg" />

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--    cvImage-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSuccess"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnShare"
        app:strokeColor="@color/red_BA"
        app:strokeWidth="4dp">

        <!--        imvImage-->
        <ImageView
            android:id="@+id/imvImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </com.google.android.material.card.MaterialCardView>

    <!--    btnShare-->
    <ImageView
        android:id="@+id/btnShare"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar" />

    <!--        tvSuccess-->
    <TextView
        android:id="@+id/tvSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_medium_italic"
        android:gravity="center"
        android:text="@string/image_has_been_saved_successfully"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lnlBottom" />


    <!--    lnlBottom-->
    <LinearLayout
        android:id="@+id/lnlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/native_ads">

        <!--        btnBottomLeft-->
        <TextView
            android:id="@+id/btnBottomLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_weight="1"
            android:background="@drawable/bg_16_solid_red"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/my_album"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!--        btnBottomRight-->
        <TextView
            android:id="@+id/btnBottomRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_16_solid_red"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


    <!--    flNativeCollab-->
    <FrameLayout
        android:id="@+id/flNativeCollab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/ads_shimmer_collap_native" />
    </FrameLayout>


    <!--    native_ads-->
    <FrameLayout
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/ads_native_big_btn_top_shimmer" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>