<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_character.AddCharacterActivity">

    <!--    flGetText-->
    <FrameLayout
        android:id="@+id/flGetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:paddingHorizontal="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        tvGetText-->
        <TextView
            android:id="@+id/tvGetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:maxLength="30"
            android:text=""
            android:textSize="40sp" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cus"
        app:layout_constraintBottom_toTopOf="@id/flFunction"

        />

    <!--    flActionBar-->
    <FrameLayout
        android:id="@+id/flActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--    flSave-->
    <FrameLayout
        android:id="@+id/flSave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintDimensionRatio="36:39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flActionBar">

        <!--        imvBackground-->
        <ImageView
            android:id="@+id/imvBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <!--        drawView-->
        <com.oc.christmas.ocmaker.create.avatar.core.custom.drawview.DrawView
            android:id="@+id/drawView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <!--    flFunction-->
    <FrameLayout
        android:id="@+id/flFunction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFBFBF"
        android:layerType="hardware"
        app:layout_constraintBottom_toTopOf="@+id/lnlBottom"
        app:layout_constraintTop_toBottomOf="@+id/flSave">

        <!--        lnlBackground-->
        <LinearLayout
            android:id="@+id/lnlBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/background"
                android:textColor="@color/red_BA"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <!--                btnBackgroundImage-->
                <TextView
                    android:id="@+id/btnBackgroundImage"
                    style="@style/single_marquee"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_100_solid_red"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/image"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <!--                btnBackgroundColor-->
                <TextView
                    android:id="@+id/btnBackgroundColor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_100_stroke_red"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/color"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--            rcvBackgroundImage-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvBackgroundImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4.5dp"
                android:paddingHorizontal="7.5dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:listitem="@layout/item_background_image" />

            <!--            rcvBackgroundColor-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvBackgroundColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4.5dp"
                android:paddingHorizontal="7.5dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:listitem="@layout/item_background_color" />
        </LinearLayout>

        <!--        lnlSticker-->
        <LinearLayout
            android:id="@+id/lnlSticker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/sticker"
                android:textColor="@color/red_BA"
                android:textSize="18sp" />

            <!--            rcvSticker-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSticker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4.5dp"
                android:paddingHorizontal="7.5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:listitem="@layout/item_sticker" />
        </LinearLayout>

        <!--        lnlSpeech-->
        <LinearLayout
            android:id="@+id/lnlSpeech"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/speech_bubbles"
                android:textColor="@color/red_BA"
                android:textSize="18sp" />

            <!--            rcvSticker-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSpeech"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4.5dp"
                android:paddingHorizontal="7.5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:listitem="@layout/item_sticker" />
        </LinearLayout>

        <!--        scvText-->
        <ScrollView
            android:id="@+id/scvText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/text"
                        android:textColor="@color/red_BA"
                        android:textSize="18sp" />

                    <!--                    btnDoneText-->
                    <ImageView
                        android:id="@+id/btnDoneText"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_done"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/red_BA" />
                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/text"
                    android:textColor="@color/red_BA"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--            edtText-->
                <EditText
                    android:id="@+id/edtText"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/bg_8_solid_white"
                    android:ellipsize="end"
                    android:hint="@string/type_your_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="30"
                    android:paddingHorizontal="16dp"
                    android:singleLine="true"
                    android:textColorHint="#99868686"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/font"
                    android:textColor="@color/red_BA"
                    android:textSize="14sp" />

                <!--            rcvFont-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvFont"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/titleFont"
                    tools:listitem="@layout/item_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/color"
                    android:textColor="@color/red_BA"
                    android:textSize="14sp" />

                <!--            rcvTextColor-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/titleColor"
                    tools:listitem="@layout/item_text_color" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_add_character_bot_nav"
        app:layout_constraintBottom_toBottomOf="@+id/lnlBottom"
        app:layout_constraintEnd_toEndOf="@+id/lnlBottom"
        app:layout_constraintStart_toStartOf="@+id/lnlBottom"
        app:layout_constraintTop_toTopOf="@+id/lnlBottom" />

    <!--    lnlBottom-->
    <LinearLayout
        android:id="@+id/lnlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--        btnBackground-->
        <ImageView
            android:id="@+id/btnBackground"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_background_selected" />

        <!--        btnSticker-->
        <ImageView
            android:id="@+id/btnSticker"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_sticker" />

        <!--        btnSpeech-->
        <ImageView
            android:id="@+id/btnSpeech"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_speech" />

        <!--        btnText-->
        <ImageView
            android:id="@+id/btnText"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_text" />
    </LinearLayout>


    <!--    flNativeCollab-->
    <FrameLayout
        android:id="@+id/flNativeCollab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/ads_shimmer_collap_native" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>